--- a/notes.html
+++ b/notes.html
@@ -4,6 +4,7 @@
     <script src="mithril.js"></script>
     <script src="ramda.min.js"></script>
     <script src="jquery.min.js"></script>
+	<script src="shared.js"></script>
 </head>
 <body>
     <script src="main.js"></script>
